updated 3dv19 links & changed main page ordering

--- a/static/assets/bib/conferences.bib
+++ b/static/assets/bib/conferences.bib
@@ -13,6 +13,7 @@
   booktitle    = "International Conference on 3D Vision (3DV)",
   month        = "September",
   year         = "2019",
+  url_Pdf={https://arxiv.org/pdf/1909.08112.pdf},
   url_Website={https://vcl3d.github.io/SphericalViewSynthesis/},
   url_Data={https://vcl3d.github.io/3D60/},
 }
@@ -23,6 +24,7 @@
   booktitle   = "International Conference on 3D Vision",
   month       = "September",
   year        = "2019",
+  url_Pdf={https://arxiv.org/pdf/1909.07043.pdf},
   url_Website={https://vcl3d.github.io/HyperSphereSurfaceRegression/},
   url_Data={https://vcl3d.github.io/3D60/},
 }
