--- a/static/assets/bib/conferences.bib
+++ b/static/assets/bib/conferences.bib
@@ -1,3 +1,37 @@
+@inproceedings{albanis2020dronepose,
+  author       = "Albanis, Georgios and Zioulis, Nikolaos and Dimou, Anastasios and Zarpalas, Dimitris and Daras, Petros",
+  title        = "DronePose: Photorealistic UAV-Assistant Dataset Synthesis for 3D Pose Estimation via a Smooth Silhouette Loss",
+  booktitle    = "European Conference on Computer Vision Workshops (ECCVW)",
+  month        = "August",
+  year         = "2020"
+}
+
+@inproceedings{karakottas2020xr360,
+  title={Xr360: A Toolkit for Mixed 360 and 3d Productions},
+  author={Karakottas, Antonis and Zioulis, Nikolaos and Doumanglou, Alexandros and Sterzentsenko, Vladimiros and Gkitsas, Vasileios and Zarpalas, Dimitrios and Daras, Petros},
+  booktitle={2020 IEEE International Conference on Multimedia \& Expo Workshops (ICMEW)},
+  pages={1--6},
+  year={2020},
+  organization={IEEE}
+}
+
+@inproceedings{gkitsas2020deep,
+  title={Deep Lighting Environment Map Estimation from Spherical Panoramas},
+  author={Gkitsas, Vasileios and Zioulis, Nikolaos and Alvarez, Federico and Zarpalas, Dimitrios and Daras, Petros},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition Workshops},
+  pages={640--641},
+  year={2020}
+}
+
+@inproceedings{sterzentsenko2020deep,
+  title={Deep soft procrustes for markerless volumetric sensor alignment},
+  author={Sterzentsenko, Vladimiros and Doumanoglou, Alexandros and Thermos, Spyridon and Zioulis, Nikolaos and Zarpalas, Dimitrios and Daras, Petros},
+  booktitle={2020 IEEE Conference on Virtual Reality and 3D User Interfaces (VR)},
+  pages={818--827},
+  year={2020},
+  organization={IEEE}
+}
+
 @inproceedings{sterzentsenko2019denoising,
   author       = "Vladimiros Sterzentsenko and Leonidas Saroglou and Anargyros Chatzitofis and Spyridon Thermos and Nikolaos Zioulis and Alexandros Doumanoglou and Dimitrios Zarpalas and Petros Daras",
   title        = "Self-Supervised Deep Depth Denoising",
