--- a/static/assets/bib/journals.bib
+++ b/static/assets/bib/journals.bib
@@ -1,3 +1,13 @@
+@ARTICLE{9204617,
+  author={A. {Chatzitofis} and L. {Saroglou} and P. {Boutis} and P. {Drakoulis} and N. {Zioulis} and S. {Subramanyam} and B. {Kevelham} and C. {Charbonnier} and P. {Cesar} and D. {Zarpalas} and S. {Kollias} and P. {Daras}},
+  journal={IEEE Access}, 
+  title={HUMAN4D: A Human-Centric Multimodal Dataset for Motions and Immersive Media}, 
+  year={2020},
+  volume={8},
+  number={},
+  pages={176241-176262},
+}
+
 @article{doumanoglou2019benchmarking,
   title={Benchmarking Open-Source Static 3D Mesh Codecs for Immersive Media Interactive Live Streaming},
   author={Doumanoglou, Alexandros and Drakoulis, Petros and Zioulis, Nikolaos and Zarpalas, Dimitrios and Daras, Petros},
