--- a/static/assets/bib/other.bib
+++ b/static/assets/bib/other.bib
@@ -1,3 +1,13 @@
+@ARTICLE{9161995,
+  author={R. F. {Ustok} and U. {Acar} and S. {Keskin} and D. {Breitgand} and A. {Weit} and P. {Drakoulis} and A. {Doumanoglou} and N. {Zioulis} and D. {Zarpalas} and P. {Daras} and F. {Iadanza} and F. {Moscatelli} and G. {Bernini}},
+  journal={IEEE Communications Magazine}, 
+  title={Service Development Kit for Media-Type Virtualized Network Services in 5G Networks}, 
+  year={2020},
+  volume={58},
+  number={7},
+  pages={51-57},
+}
+
 @article{apostolakisbeyond,
   title={Beyond Online Multiplayer: Sharing and augmenting Tele-Immersive 3D game experiences with multiple geographically distributed users.},
   author={Apostolakis, Konstantinos C and Zioulis, Nikolaos and Doumanoglou, Alexandros and Alexiadis, Dimitrios S},
