--- a/static/assets/bib/other.bib
+++ b/static/assets/bib/other.bib
@@ -8,6 +8,34 @@
   pages={51-57},
 }
 
+@inproceedings{athanasoulas2020avoidx,
+  title={AVoidX: An Augmented VR Game},
+  author={Athanasoulas, Rafail and Boutis, Prodromos and Chatzitofis, Anargyros and Doumanoglou, Alexandros and Drakoulis, Petros and Saroglou, Leonidas and Sterzentsenko, Vladimiros and Zioulis, Nikolaos and Zarpalas, Dimitrios and Daras, Petros},
+  booktitle={2020 IEEE Conference on Virtual Reality and 3D User Interfaces Abstracts and Workshops (VRW)},
+  pages={841--842},
+  year={2020},
+  organization={IEEE}
+}
+
+@inproceedings{christaki2019space,
+  title={Space wars: An augmentedvr game},
+  author={Christaki, Kyriaki and Apostolakis, Konstantinos C and Doumanoglou, Alexandros and Zioulis, Nikolaos and Zarpalas, Dimitrios and Daras, Petros},
+  booktitle={International Conference on Multimedia Modeling},
+  pages={566--570},
+  year={2019},
+  organization={Springer}
+}
+
+@inproceedings{karakottas2018augmented,
+  title={Augmented VR},
+  author={Karakottas, Antonis and Papachristou, Alexandros and Doumanoqlou, Alexandros and Zioulis, Nikolaos and Zarpalas, Dimitrios and Daras, Petros},
+  booktitle={2018 IEEE Conference on Virtual Reality and 3D User Interfaces (VR)},
+  pages={1--1},
+  year={2018},
+  organization={IEEE},
+  url_Video={https://www.youtube.com/watch?v=7O_TrhtmP5Q}
+}
+
 @article{apostolakisbeyond,
   title={Beyond Online Multiplayer: Sharing and augmenting Tele-Immersive 3D game experiences with multiple geographically distributed users.},
   author={Apostolakis, Konstantinos C and Zioulis, Nikolaos and Doumanoglou, Alexandros and Alexiadis, Dimitrios S},
